// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationRouting component with ApplicationPage should handle correctly if app found 1`] = `
<Wrapper
  app={
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "name": "Collect",
      "name_prefix": "Cozy",
      "permissions": Object {
        "mock": Object {
          "type": "io.mock.doctype",
        },
        "mock2": Object {
          "type": "io.mock.doctype2",
        },
      },
      "related": "http://collect.cozy.mock/",
      "slug": "collect",
      "tags": Array [
        "konnector",
        "collect",
        "bills",
        "providers",
        "files",
      ],
      "type": "webapp",
      "uninstallable": false,
      "version": "3.0.0",
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  parent="myapps"
/>
`;

exports[`ApplicationRouting component with ApplicationPage should render correctly if apps list is null but not installedApps 1`] = `
<Wrapper
  app={
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "name": "Collect",
      "name_prefix": "Cozy",
      "permissions": Object {
        "mock": Object {
          "type": "io.mock.doctype",
        },
        "mock2": Object {
          "type": "io.mock.doctype2",
        },
      },
      "related": "http://collect.cozy.mock/",
      "slug": "collect",
      "tags": Array [
        "konnector",
        "collect",
        "bills",
        "providers",
        "files",
      ],
      "type": "webapp",
      "uninstallable": false,
      "version": "3.0.0",
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  parent="myapps"
/>
`;

exports[`ApplicationRouting component with Channel install should handle correctly if installed app found 1`] = `
<withRouter(InstallModal)
  app={
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "name": "Collect",
      "name_prefix": "Cozy",
      "permissions": Object {
        "mock": Object {
          "type": "io.mock.doctype",
        },
        "mock2": Object {
          "type": "io.mock.doctype2",
        },
      },
      "related": "http://collect.cozy.mock/",
      "slug": "collect",
      "tags": Array [
        "konnector",
        "collect",
        "bills",
        "providers",
        "files",
      ],
      "type": "webapp",
      "uninstallable": false,
      "version": "3.0.0",
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  channel="beta"
  fetchApp={[Function]}
  fetchError={undefined}
  installApp={[MockFunction mockUpdateApp]}
  installError={undefined}
  isAppFetching={undefined}
  isInstalling={undefined}
  parent="/discover"
/>
`;

exports[`ApplicationRouting component with Channel install should render correctly if uninstalled app found 1`] = `
<withRouter(InstallModal)
  app={
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "isInRegistry": true,
      "name": "Photos",
      "name_prefix": "Cozy",
      "slug": "photos",
      "type": "webapp",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  channel="beta"
  fetchApp={[Function]}
  fetchError={undefined}
  installApp={[MockFunction mockInstallApp]}
  installError={undefined}
  isAppFetching={undefined}
  isInstalling={undefined}
  parent="/discover"
/>
`;

exports[`ApplicationRouting component with IntentModal should handle correctly if installed konnector found 1`] = `
<IntentModal
  action="CREATE"
  closable={true}
  dismissAction={[Function]}
  doctype="io.cozy.accounts"
  mobileFullScreen={true}
  mobileFullscreen={false}
  onComplete={[Function]}
  options={
    Object {
      "slug": "konnector-trinlane",
    }
  }
  overflowHidden={false}
  primaryType="regular"
  secondaryType="secondary"
  size="xlarge"
/>
`;

exports[`ApplicationRouting component with Modal should handle correctly if installed app found 1`] = `
<Wrapper
  app={
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "name": "Collect",
      "name_prefix": "Cozy",
      "permissions": Object {
        "mock": Object {
          "type": "io.mock.doctype",
        },
        "mock2": Object {
          "type": "io.mock.doctype2",
        },
      },
      "related": "http://collect.cozy.mock/",
      "slug": "collect",
      "tags": Array [
        "konnector",
        "collect",
        "bills",
        "providers",
        "files",
      ],
      "type": "webapp",
      "uninstallable": false,
      "version": "3.0.0",
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  parent="/myapps"
  uninstallApp={[MockFunction mockUninstallApp]}
  uninstallError={undefined}
/>
`;

exports[`ApplicationRouting component with Modal should render correctly if apps list is null but not installedApps 1`] = `
<Wrapper
  app={
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "installed": true,
      "isInRegistry": true,
      "name": "Collect",
      "name_prefix": "Cozy",
      "permissions": Object {
        "mock": Object {
          "type": "io.mock.doctype",
        },
        "mock2": Object {
          "type": "io.mock.doctype2",
        },
      },
      "related": "http://collect.cozy.mock/",
      "slug": "collect",
      "tags": Array [
        "konnector",
        "collect",
        "bills",
        "providers",
        "files",
      ],
      "type": "webapp",
      "uninstallable": false,
      "version": "3.0.0",
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  parent="/myapps"
  uninstallApp={[MockFunction mockUninstallApp]}
  uninstallError={undefined}
/>
`;

exports[`ApplicationRouting component with Modal should render correctly if uninstalled app found 1`] = `
<withRouter(InstallModal)
  app={
    Object {
      "categories": Array [
        "cozy",
      ],
      "developer": Object {
        "name": "Cozy",
      },
      "editor": "Cozy",
      "icon": "<svg></svg>",
      "isInRegistry": true,
      "name": "Photos",
      "name_prefix": "Cozy",
      "slug": "photos",
      "type": "webapp",
      "uninstallable": true,
      "versions": Object {
        "beta": Array [
          "3.0.0",
        ],
        "dev": Array [
          "3.0.0",
        ],
        "stable": Array [
          "3.0.0",
        ],
      },
    }
  }
  installApp={[MockFunction mockInstallApp]}
  installError={undefined}
  isInstalling={undefined}
  parent="/myapps"
/>
`;
